# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-a11yManager") {
  branch_protector_ret = "pac_ret"
  cli_config_file = "ohos-a11yManager.json"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_enable = true
  install_images = [ "system" ]
  relative_install_dir = "cli_tool/executable"

  sources = [
    "src/main.cpp",
  ]

  include_dirs = [
    "../../interfaces/innerkits/acfwk/include",
    "../../interfaces/innerkits/asacfwk/include",
    "../../interfaces/innerkits/common/include",
    "../../common/log/include",
    "../../common/interface/include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"ohos-a11yManager\"",
    "AAMS_LOG_DOMAIN = 0xD001D05",
  ]

  if (build_variant == "user") {
    defines += [ "RELEASE_VERSION" ]
  }

  deps = [
    "../../interfaces/innerkits/acfwk:accessibilityconfig",
    "../../interfaces/innerkits/asacfwk:accessibilityclient",
    "../../interfaces/innerkits/common:accessibility_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "barrierfree"
  part_name = "accessibility"
}