# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/services/test/aamstestmock.gni")
import("//build/test.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = aams_mock_include_dirs
  include_dirs += [
    "//base/accessibility/common/log/include",
    "//base/accessibility/dummyData",
    "//base/accessibility/frameworks/aafwk/include",
    "//base/accessibility/frameworks/aafwk/test/mock/include",
    "//base/accessibility/frameworks/asacfwk/include",
    "//base/accessibility/interfaces/innerkits/aafwk/include",
    "//base/accessibility/interfaces/innerkits/asacfwk/include",
    "//base/accessibility/interfaces/innerkits/common/include",
    "//base/accessibility/interfaces/innerkits/common/include",
    "//base/accessibility/services/aams/include",
    "//base/accessibility/services/interface/include",
    "//base/accessibility/services/interface/include",
    "//base/accessibility/services/interface/include/parcel",
    "//base/accessibility/services/interface/include/parcel",
    "//base/accessibility/services/test/mock/include/extern",
    "//base/accessibility/util/include",
    "//base/hiviewdfx/hiview/adapter/utility/include/extra/singleton.h",
    "//foundation/arkui/napi/native_engine",
    "//foundation/multimodalinput/input/util/common/include",
    "//base/accessibility/services/aams/test/mock/include",
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD005205",
  ]
}

ohos_unittest("accessible_ability_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_element_operator_callback_impl.cpp",
    "../src/accessibility_ui_test_ability_impl.cpp",
    "../src/accessible_ability_channel_client.cpp",
    "../src/accessible_ability_client_impl.cpp",
    "//base/accessibility/frameworks/aafwk/test/mock/src/mock_accessible_ability_channel_proxy.cpp",
    "//base/accessibility/frameworks/aafwk/test/mock/src/mock_accessible_ability_channel_stub.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_constants.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_element_info.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_gesture_inject_path.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_window_info.cpp",
    "//base/accessibility/services/aams/src/accessibility_display_manager.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_manager_service_event_handler.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_account_data.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_common_event.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_event_transmission.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_input_interceptor.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_window_connection.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessibility_window_manager.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessible_ability_connection.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "//base/accessibility/services/aams/test/mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "//base/accessibility/services/interface/src/accessibility_element_operator_callback_stub.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_stub.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_manager_service_proxy.cpp",
    "//base/accessibility/services/interface/src/parcel/accessibility_ability_info_parcel.cpp",
    "//base/accessibility/services/interface/src/parcel/accessibility_caption_parcel.cpp",
    "//base/accessibility/services/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "//base/accessibility/services/interface/src/parcel/accessibility_event_info_parcel.cpp",
    "unittest/accessibility_element_operator_callback_impl_test.cpp",
    "unittest/accessibility_ui_test_ability_impl_test.cpp",
    "unittest/accessible_ability_channel_client_test.cpp",
    "unittest/accessible_ability_client_impl_test.cpp",
  ]
  sources += aams_mock_multimodalinput_src

  configs = [ ":module_private_config" ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resource_management/frameworks/resmgr:global_resmgr",
    "//foundation/arkui/napi:ace_napi",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "native_appdatamgr:native_preferences",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
}

###############################################################################

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":accessible_ability_test" ]
}
###############################################################################
